[package]
name = "ebur128-crate"
version = "0.0.0"
authors = ["Wilhelm Bartel <wilhelm.bartel@streamonkey.de>"]
edition = "2021"
repository = "https://github.com/streamonkey/ebur128_wasm"
description = "EBU R128 Audio Loudness in WebAssembly"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

ebur128 = "0.1.6"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
